lot of bugfixes
