# SwiftSurfing/SwiftSurfing/Swaggers/Models/CreateCouchData.swift
@@ -1,0 +1,50 @@
+//
+// CreateCouchData.swift
+//
+// Generated by swagger-codegen
+// https://github.com/swagger-api/swagger-codegen
+//
+
+import Foundation
+
+
+
+public struct CreateCouchData: Codable {
+
+    public var userId: String?
+    public var name: String?
+    public var address: String?
+    public var city: String?
+    public var country: String?
+    public var latitude: Double?
+    public var longitude: Double?
+    public var maxGuests: Int?
+    public var _description: String?
+
+    public init(userId: String?, name: String?, address: String?, city: String?, country: String?, latitude: Double?, longitude: Double?, maxGuests: Int?, _description: String?) {
+        self.userId = userId
+        self.name = name
+        self.address = address
+        self.city = city
+        self.country = country
+        self.latitude = latitude
+        self.longitude = longitude
+        self.maxGuests = maxGuests
+        self._description = _description
+    }
+
+    public enum CodingKeys: String, CodingKey { 
+        case userId
+        case name
+        case address
+        case city
+        case country
+        case latitude
+        case longitude
+        case maxGuests
+        case _description = "description"
+    }
+
+
+}
+
