# SwiftSurfing/SwiftSurfing/Swaggers/Models/CreateMessageData.swift
@@ -1,0 +1,26 @@
+//
+// CreateMessageData.swift
+//
+// Generated by swagger-codegen
+// https://github.com/swagger-api/swagger-codegen
+//
+
+import Foundation
+
+
+
+public struct CreateMessageData: Codable {
+
+    public var userId: String?
+    public var conversationId: String?
+    public var text: String?
+
+    public init(userId: String?, conversationId: String?, text: String?) {
+        self.userId = userId
+        self.conversationId = conversationId
+        self.text = text
+    }
+
+
+}
+
