# SwiftSurfing/SwiftSurfing/Swaggers/Models/CreateRatingData.swift
@@ -1,0 +1,28 @@
+//
+// CreateRatingData.swift
+//
+// Generated by swagger-codegen
+// https://github.com/swagger-api/swagger-codegen
+//
+
+import Foundation
+
+
+
+public struct CreateRatingData: Codable {
+
+    public var userId: String?
+    public var couchId: String?
+    public var value: Int?
+    public var comment: String?
+
+    public init(userId: String?, couchId: String?, value: Int?, comment: String?) {
+        self.userId = userId
+        self.couchId = couchId
+        self.value = value
+        self.comment = comment
+    }
+
+
+}
+
